# waste-prediction

./: .gitignore  README.md  project-description.md  project_description.md  pyproject.toml
.github/workflows/: notify-proj-desc-change.yml
app/: Sub_stream_name_label_encoder.pkl  app.py  ds_label_encoder.pkl  encoder.py  prediction.py  requirements.txt
app/encoders/: Category_label_encoder.pkl  Fate_label_encoder.pkl  Jurisdiction_label_encoder.pkl  Management_label_encoder.pkl  Type_label_encoder.pkl
app/models/: xgb_model.sav
conf/base/: catalog.yml
data/02_intermediate/: encoded_data.csv  encoded_data_08_12_13.csv  encoded_data_19_21.csv  encoded_data_not_19_21.csv  encoded_data_not_recycled.csv  encoded_data_with_australia.csv  encoded_data_with_mining.csv  encoded_data_with_total_classification.csv  encoded_data_with_type_classification.csv  encoded_data_without_australia.csv  encoded_data_without_mining.csv  encoded_data_without_zero_values.csv  preprocessed_data_08_12_13.csv  preprocessed_data_19_21.csv  preprocessed_data_not_recycled.csv  preprocessed_data_with_australia.csv  preprocessed_data_with_mining.csv  preprocessed_data_with_total_classification.csv  preprocessed_data_with_type_classification.csv
docs/source/: conf.py  index.rst
notebooks/: Data Visualisation.ipynb  Datahackathon_hypothesisTesting.ipynb  Hypothesis_testing.ipynb  Susu_MDSS.ipynb  Untitled.ipynb
notebooks/Encoding/: Encoding-No recycling.ipynb  Encoding.ipynb
notebooks/Modelling/: AdaBoost.ipynb  LightGBM.ipynb  (+6 more)
src/: setup.py
workflows/: notify-proj-desc-change.yml
(+15 files in other folders)
